--- a/style.css
+++ b/style.css
@@ -12,9 +12,9 @@ body {
 
     div.content {
         background-color: white;
-        margin: 60px 10% 80px 10%;
-        padding: 0px 30px 30px 30px;
-        min-width: 350px;
+        margin: 40px 8px 80px 8px;
+        padding: 0px 8px 20px 8px;
+        /* min-width: 350px; */
         box-shadow: 0px 0px 8px 8px rgba(0, 0, 0, 0.1);
         overflow: visible;
     }
@@ -69,17 +69,18 @@ body {
         width: 100%;
         color:white;
         background-color: #6C829DC0"
+        height: 50px;
     }
 
     table.info td {
         text-align: center;
         vertical-align: top;
-        font-size: 14px;
+        font-size: 12px;
     }
         table.info th {
         vertical-align: bottom;
         padding-bottom: 8px;
-        font-size: 16px;
+        font-size: 14px;
     }
 
     img.info {
@@ -91,7 +92,7 @@ body {
     }
 
     div.col {
-        width:45%;
+        width:100%;
         margin-top: 20px;
     }
 
@@ -104,13 +105,15 @@ body {
     }
 
     div.col1 {
-       display: inline-block;
-       margin-right: 10%;
+        display: inline-block;
+       /*margin-right: 10%; */
+        margin-bottom: 20px;
     }
 
     div.col2 {
-        float: right;
+        /* float: right; */
     }
+
     div.ingredients p {
         text-align: center;
         font-size: 14px;
@@ -147,6 +150,47 @@ body {
         height: 40px;
      }
 
-     * {
-        overflow: auto;
-     }
+    /* Desktop Styles */
+     @media only screen and (min-width: 768px) {
+           div.content {
+                margin: 60px 10% 80px 10%;
+                padding: 0px 30px 30px 30px;
+                min-width: 350px;
+            }
+           table.info {
+                height: 80px;
+            }
+
+            table.info td {
+                font-size: 14px;
+            }
+            table.info th {
+                font-size: 16px;
+            }
+
+            div.col {
+                width:45%;
+            }
+
+            div.col1 {
+               margin-right: 10%;
+            }
+
+            div.col2 {
+                float: right;
+
+            }
+   }
+   /* Large Desktop Screens */
+        @media only screen and (min-width: 900px) {
+            div.content {
+                margin-left: auto;
+                margin-right: auto;
+                width: 640px;
+
+                }
+    }
+
+
+
+        }
